--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ h2 {
   padding-top: 0;
   margin-top: 0;
   margin-bottom: 0;
-  color: fuchsia;
 }
 
 #faren {
@@ -47,4 +46,9 @@ h2 {
   border-radius: 3px;
   margin: 0 auto;
   margin-top: 30px;
+}
+
+.coded-by {
+  padding-top: 15px;
+  text-align: center;
 }
